# internal/controller/routingManage.go
@@ -8,7 +8,6 @@ import (
 	"GoWAFer/pkg/utils/api_helper"
 	"github.com/gin-gonic/gin"
 	"net/http"
-	"strconv"
 )
 
 // RoutingManageController 路由管理控制器
@@ -38,12 +37,12 @@ func (c *RoutingManageController) AddRouting(g *gin.Context) {
 	}
 
 	// 检查路由格式是否正确
-	if !utils.ValidateRouting(req.Routing) {
+	if !utils.ValidateRouting(req.Path) {
 		g.Error(types.ErrRoutingNotMatch)
 		return
 	}
 
-	err := c.routingManageService.AddRouting(req.Routing, req.Method, req.Type)
+	err := c.routingManageService.AddRouting(req.Path, req.IsBlack)
 	if err != nil {
 		g.Error(err)
 		return
@@ -57,8 +56,8 @@ func (c *RoutingManageController) AddRouting(g *gin.Context) {
 // @Description 分页查询路由管理记录
 // @Tags Routing
 // @Produce json
-// @Param keywords query string false "关键词"
-// @Param type query string true "路由类型"
+// @Param query query string false "查询关键字"
+// @Param isBlack query string false "是否为黑名单"
 // @Param page query int false "页码"
 // @Param perPage query int false "页面大小"
 // @Success 200 {object} api_helper.Response
@@ -66,9 +65,15 @@ func (c *RoutingManageController) AddRouting(g *gin.Context) {
 func (c *RoutingManageController) GetRouting(g *gin.Context) {
 	// 通过请求实例化分页结构体
 	page := pagination.NewFromRequest(g)
-	keyword := g.Query("keywords")
-	routerType, _ := strconv.Atoi(g.DefaultQuery("type", "1"))
-	page = c.routingManageService.GetRoutingWithPagination(page, routerType, keyword)
+	query := g.Query("query")
+	isBlack := g.DefaultQuery("isBlack", "false")
+	var isBlackBool bool
+	if isBlack == "true" {
+		isBlackBool = true
+	} else {
+		isBlackBool = false
+	}
+	page = c.routingManageService.GetRoutingWithPagination(page, isBlackBool, query)
 	g.JSON(http.StatusOK, api_helper.Response{Status: 0, Msg: "success", Data: page})
 }
 
@@ -88,7 +93,7 @@ func (c *RoutingManageController) DeleteRouting(g *gin.Context) {
 		return
 	}
 
-	err := c.routingManageService.DeleteRouting(req.Routing, req.Method, req.Type)
+	err := c.routingManageService.DeleteRouting(req.Path, req.IsBlack)
 	if err != nil {
 		g.Error(err)
 		return
