# internal/types/routingManage.go
@@ -2,20 +2,17 @@ package types
 
 // RouteInfo 路由信息
 type RouteInfo struct {
-	Routing string `json:"routing"` // 路由名
-	Method  string `json:"method"`  // HTTP 方法
+	Path string `json:"path"`
 }
 
 // AddRoutingRequest 添加路由请求
 type AddRoutingRequest struct {
-	Routing string `json:"routing" binding:"required"`
-	Type    int    `json:"type" binding:"required"`
-	Method  string `json:"method" binding:"required"`
+	Path    string `json:"path" binding:"required"`
+	IsBlack bool   `json:"isBlack"`
 }
 
 // DeleteRoutingRequest 删除路由请求
 type DeleteRoutingRequest struct {
-	Routing string `json:"routing" binding:"required"`
-	Type    int    `json:"type" binding:"required"`
-	Method  string `json:"method" binding:"required"`
+	Path    string `json:"path" binding:"required"`
+	IsBlack bool   `json:"isBlack"`
 }
